# python-project-52

./: .coverage  .env.example  .gitignore  Makefile  README.md  build.sh  coverage.xml  pyproject.toml  ruff.toml
.github/workflows/: python-package.yml
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html
task_manager/templates/includes/: form_field.html
tasks/: filters.py  flashes.py  forms.py  mixins.py  models.py  tests_tasks.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at_and_more.py  0002_initial.py  0003_task.py
tasks/templates/labels/: delete.html  form.html  list.html
tasks/templates/statuses/: create_update.html  delete.html  list.html
tasks/templates/tasks/: create_update.html  delete.html  detail.html  filter.html  form.html  list.html
tasks/tests/: test_labels.py  test_statuses.py  test_tasks.py
users/: flashes.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: delete.html  list.html  login.html  register.html  update.html
