[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "django-widget-tweaks>=1.5.1",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "gunicorn>=25.3.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "rollbar>=1.3.0",
    "ruff>=0.15.12",
]
